--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://damiansebastians.github.io/Damiansebastians_PORTFOLIO",
+  "homepage": "http://portfolio-reactjs.s3-website.eu-west-3.amazonaws.com/",
   "name": "portfolio---react",
   "version": "0.1.0",
   "private": true,
